modified:   About.html 	modified:   gallery.html 	deleted:    images/Iloilo1.png 	new file:   images/Pulag's_Mossy_Forest.jpg 	deleted:    images/antipolo1.jpg 	deleted:    images/antipolo10.jpg 	deleted:    images/antipolo11.jpg 	deleted:    images/antipolo12.png 	deleted:    images/antipolo13.png 	deleted:    images/antipolo2.png 	deleted:    images/antipolo3.jpg 	deleted:    images/antipolo4.jpg 	deleted:    images/antipolo5.jpg 	deleted:    images/antipolo6.jpg 	deleted:    images/antipolo7.jpg 	deleted:    images/antipolo8.jpg 	deleted:    images/antipolo9.jpg 	deleted:    images/baguiocat.jpg 	deleted:    images/baguiohorse.jpg 	deleted:    images/baguiolionhead.png 	deleted:    images/baguionyt.jpg 	deleted:    images/baguiopar.jpg 	deleted:    images/baguiopark.jpg 	deleted:    images/baguiostr.jpg 	deleted:    images/baguiotam.jpg 	new file:   images/daraetan.jpg 	new file:   images/daraetan1.jpg 	new file:   images/daraetan2.jpg 	new file:   images/daraetan3.jpg 	new file:   images/daraitan.jpg 	new file:   images/daraitan1.png 	new file:   images/daraitan10.jpg 	new file:   images/daraitan11.jpg 	new file:   images/daraitan12.jpg 	new file:   images/daraitan13.png 	new file:   images/daraitan7.jpg 	new file:   images/daraitan8.jpg 	new file:   images/daraitan8.png 	new file:   images/daraitan9.jpg 	new file:   images/gigantes.png 	new file:   images/gigantes10.png 	new file:   images/gigantes2.jpg 	new file:   images/gigantes3.jpg 	new file:   images/gigantes4.jpg 	new file:   images/gigantes5.jpg 	new file:   images/gigantes6.jpg 	new file:   images/gigantes6.png 	new file:   images/gigantes7.jpg 	new file:   images/gigantes8.jpg 	new file:   images/gigantes9.jpg 	deleted:    images/hinulugang taktak.mp4 	deleted:    images/iloilo1.jpg 	deleted:    images/iloilo2.jpg 	deleted:    images/iloilo3.jpg 	deleted:    images/iloilo4.jpg 	deleted:    images/john-lorenz-tajonera-rB-18BVOd1c-unsplash.jpg 	deleted:    images/mystical.jpg 	deleted:    images/mystica

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
             </a></a></div>
           <label for="menu_icon"> <i class="fa fa-bars"></i></label>
           <input id="menu_icon" type="checkbox">
-          <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
+          <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a>
           </menu>
         </section>
 
@@ -40,13 +40,13 @@
                                 <img src="media/palawan.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="images/antipolo2.png" class=" d-block w-100 img-fluid" alt="...">
+                                <img src="images/pulag12.png" class=" d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="images/baguio1.jpg" class="d-block w-100 img-fluid" alt="...">
+                                <img src="images/daraitan13.png" class="d-block w-100 img-fluid" alt="...">
                             </div>
                             <div class="carousel-item" style="height: 420px;">
-                                <img src="images/iloilo1.jpg" class="d-block w-100 img-fluid" alt="...">
+                                <img src="images/gigantes4.jpg" class="d-block w-100 img-fluid" alt="...">
                             </div>        
                         </div>
                     
@@ -201,22 +201,22 @@
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" style="height: 200px;">
-                                    <img src="images/baguio2.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/pulag10.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/baguiopar.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/pulag12.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/baguiohorse.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/pulag11.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/baguiostr.jpg" class=" d-block w-100 img-fluid" alt="...">
+                                    <img src="images/pulag3.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/baguiolionhead.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/pulag7.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/baguiotam.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/pulag5.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -228,7 +228,7 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <h5 class="card-title">Baguio City</h5><br>
+                        <h5 class="card-title">Mt. Pulag National Park</h5><br>
                         <a href="post4.html" class="btn btn-primary">Read</a>
                     </div>
                     </div>
@@ -243,22 +243,22 @@
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" style="height: 200px;" >
-                                    <img src="images/antipolo6.jpg" class=" d-block w-100 img-fluid" alt="...">
+                                    <img src="images/daraitan1.png" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/antipolo2.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/daraitan10.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/taktak.jpeg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/daraitan13.png" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/antipolo9.jpg" class=" d-block w-100 img-fluid" alt="...">
+                                    <img src="images/daraitan7.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/mystical2.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/daraitan8.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/antipolo13.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/daraitan11.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -270,7 +270,7 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <h5 class="card-title">Tayo Na! Sa Antipolo </h5><br>
+                        <h5 class="card-title">Mt. Daraitan Adventure Camp</h5><br>
                         <a href="post5.html" class="btn btn-primary">Read</a>
                       </div>
                     </div>
@@ -283,22 +283,22 @@
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" style="height: 200px;">
-                                    <img src="images/iloilo2.jpg" class=" d-block w-100 img-fluid" alt="...">
+                                    <img src="images/gigantes2.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/iloilo3.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/gigantes3.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/iloilo4.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/gigantes4.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/Iloilo1.png" class=" d-block w-100 img-fluid" alt="...">
+                                    <img src="images/gigantes7.jpg" class=" d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/iloilo3.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/gigantes5.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item" style="height: 200px;">
-                                    <img src="images/iloilo2.jpg" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="images/gigantes9.jpg" class="d-block w-100 img-fluid" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -310,7 +310,7 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <h5 class="card-title">Province of Iloilo</h5><br>
+                        <h5 class="card-title">The Islas De Gigantes, Iloilo</h5><br>
                         <a href="post6.html" class="btn btn-primary">Read</a>
                       </div>
                     </div>
