--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </a></a></div>
           <label for="menu_icon"> <i class="fa fa-bars"></i></label>
           <input id="menu_icon" type="checkbox">
-          <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
+          <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a>
           </menu>
         </section>
         <h1 id="above-the-fold__description">
@@ -87,8 +87,8 @@
           <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post4.html">See Full Blog</a>
               <div class="image4"></div>
               <div class="post-card__details">
-                <h2><a href="post4.html">Baguio City, Tam-Awan </a></h2>
-                <p>Explore the Summer Capital of the Philippines, With its cool climate and lush pine forests, Baguio City is a great place to relax and experience the best of nature. Discover the many attractions, from tourist destinations to mossy plants and orchids, that make Baguio City the perfect destination for your next vacation! </p><a class="post-card__avatar" href="post4.html">
+                <h2><a href="post4.html">Mt. Pulag National Park -Benguet </a></h2>
+                <p>The second tallest mountain in the Philippines and the highest point on Luzon is Mt. Pulag National Park, which rises to a height of 2,922 meters above the sea. The entire park is extremely rocky, with steep to extremely steep slopes at the mountain sides and generally rolling terrain at the mountain peak. It is part of the Philippine Cordillera Mountain Chain. </p><a class="post-card__avatar" href="post4.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -100,8 +100,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post5.html">See Full Blog</a>
               <div class="image5"></div>
               <div class="post-card__details">
-                <h2><a href="post5.html">Tayo Na! Sa Antipolo -Hinulugang Taktak </a></h2>
-                <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, and cafeterias. </p><a class="post-card__avatar" href="post5.html">
+                <h2><a href="post5.html">Mt. Daraitan Adventure Camp </a></h2>
+                <p>In Tanay, Rizal, a neighborhood called Daraitan is tucked away among the Sierra Madre Mountain Range. In the middle of the mountain, there lies a calm and tranquil village. The 3,150 residents of the mountain barangay still maintain the characteristics of a traditional barrios: car-free streets, donkeys hauling cargo, roosters serving as the bariago's alarm clock. </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -113,15 +113,15 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post6.html">See Full Blog</a>
               <div class="image6"></div>
               <div class="post-card__details">
-                <h2><a href="post6.html">Province of Iloilo, Garin Farm </a></h2>
-                <p>It is known as the "Heart of the Philippines" because of its people's sweet, giving, and loving nature. You'll fall in love with the stunning tourist destinations across Iloilo, which is also known as the "City of Love" and is known for its historic Hispanic structures that is mixed with a sense of the past along with the present."  </p><a class="post-card__avatar" href="post6.html">
+                <h2><a href="post6.html">The Islas De Gigantes – Carles, Iloilo </a></h2>
+                <p>The name of a tree species native to the islands, Sabuluag or Salauag, was once used to refer to the Gigantes group. The name was changed to Gigantes at the time of Spanish colonization. According to a local tale, enormous sets of human bones were discovered within coffins inside Bakwitan Cave, which led to the name change. Residents also think engkantos live on the island.</p><a class="post-card__avatar" href="post6.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
                   <div class="avatar__name">Jennifer Pajalla-Bravo</div>
-                  <div class="avatar__muted-line"></div></a>
-              </div>
+              <div class="avatar__muted-line"></div></a>
             </div>
+          </div>
         </div>
         <div id="loadMore" >
           <a href="#">View More</a>
@@ -129,6 +129,7 @@
        </div>
        <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
     </section>
+    
     <footer>
       <div class="container_wrapper">
         <div id="footer__site_description">
