modified:   About.html

--- a/About.html
+++ b/About.html
@@ -107,7 +107,7 @@
                                   <h2><a href="#">Fantastic Blogs </a></h2>
                                   <p>I was inspired for their detailed blogs. It was a very informative and I'm getting excited to try travelling at the beaches in our country too soon. I want to enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, and cafeterias. </p><a class="post-card__avatar" href="post5.html">
                                     <div class>
-                                      <img src="Images/avatar.png" height="60" width="60" class="rounded-circle">
+                                      <img src="images/avatar.png" height="60" width="60" class="rounded-circle">
                                     </div>
                                     <div class="avatar__name">Angela B.</div>
                                     <div class="avatar__muted-line"></div></a>
@@ -126,7 +126,7 @@
                                   <strong>This is the best so far.</strong>                                   <h2><a href="post5.html">Tayo Na! Sa Antipolo </a></h2>
                                   <p>Very impressive and my next destination would probably be at Carles Iloilo. </p><a class="post-card__avatar" href="post5.html">
                                     <div class>
-                                      <img src="Images/avatar.png" height="60" width="60" class="rounded-circle">
+                                      <img src="images/avatar.png" height="60" width="60" class="rounded-circle">
                                     </div>
                                     <div class="avatar__name">Pink G.</div>
                                     <div class="avatar__muted-line"></div></a>                               </div>
@@ -144,7 +144,7 @@
                                     <h2><a href="#">Tara biyahe tayo sa Pilipinas </a></h2>
                                     <p>Would love to explore Philippines now, and soon to get at Davao. I never thought of visiting at Mindanao but as I have read it will be a great destination for a relaxing vacation. </p><a class="post-card__avatar" href="#">
                                       <div class>
-                                        <img src="Images/avatar.png" height="60" width="60" class="rounded-circle">
+                                        <img src="images/avatar.png" height="60" width="60" class="rounded-circle">
                                       </div>
                                       <div class="avatar__name">Pink G.</div>
                                       <div class="avatar__muted-line"></div></a>
@@ -163,7 +163,7 @@
                                     <h2><a href="#">Love it </a></h2>
                                     <p>Wow! I would try to go hiking to Mount Pulag. I just want to see the different nature phases it has. </p><a class="post-card__avatar" href="post5.html">
                                       <div class>
-                                        <img src="Images/avatar.png" height="60" width="60" class="rounded-circle">
+                                        <img src="images/avatar.png" height="60" width="60" class="rounded-circle">
                                       </div>
                                       <div class="avatar__name">Pink G.</div>
                                       <div class="avatar__muted-line"></div></a> 
@@ -182,7 +182,7 @@
                                    <h2><a href="#">Wow I want to visit Palawan </a></h2>
                                   <p>It's so great that I have read this informative article for Palawan. It's truly one on my bucket list to go to.</p><a class="post-card__avatar" href="#">
                                     <div class>
-                                      <img src="Images/avatar.png" height="60" width="60" class="rounded-circle">
+                                      <img src="images/avatar.png" height="60" width="60" class="rounded-circle">
                                     </div>
                                     <div class="avatar__name">Jessie J.</div>
                                     <div class="avatar__muted-line"></div></a>                                
