--- a/About.html
+++ b/About.html
@@ -65,9 +65,10 @@
                            
                             <h2><strong>Founders In Action</strong></h2>
                                 <br>
-                                <p>“We travel, some of us forever, to seek other places, other lives, other souls.” 
+                                <p>We travel, some of us forever, to seek other places, other lives, other souls.” 
                                   To develop, learn, and grow, you must go out into the world. If you have never seen other cultures or viewpoints from completely different people, how can you truly know who you are and what you believe in? This site will help you decide on the perfect place for your next journey. 
-                                  And love our own country’s finest tourism."
+                                  And love our own country’s finest tourism. <br>
+                                  We are inspired to see, taste, and try new things when we travel because it forces us out of our comfort zones. It continuously tests our ability not only to adapt to and explore new environments, but also to interact with other people, welcome new experiences as they arrive, and share them with friends and loved ones.
                                   </p><a class="post-card__avatar" href="#">
                                   <div class>
                                     <img src="images/jenprofilepic.jpg" height="60" width="60" class="rounded-circle">
@@ -81,7 +82,8 @@
                                 <h2><strong>Founders In Action</strong></h2>
                                 <br>
                                 <p>We've come up with something that can help our country's tourism. By posting some of the most inviting Tourist Spot galleries, we’ll encourage viewers to love our country as much as they would want to visit every area of this.
-                                  We’ll create blogs with the beneficial impacts of traveling and provide an open site that will broaden their understanding and appreciation of local tourism.
+                                  We’ll create blogs with the beneficial impacts of traveling and provide an open site that will broaden their understanding and appreciation of local tourism. <br>
+                                  By encountering new environments, people, and cultures when traveling, you can enhance your mental health and disrupt your routine. According to a new study, folks who travel frequently—even 75 miles away from home—are 7% happier than those who do not.
                                   </p><a class="post-card__avatar" href="#">
                                   <div class>
                                     <img src="profile.jpg" height="60" width="60" class="rounded-circle">
@@ -123,7 +125,8 @@
                               </h2>
                               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                                 <div class="accordion-body">
-                                  <strong>This is the best so far.</strong>                                   <h2><a href="post5.html">Tayo Na! Sa Antipolo </a></h2>
+                                  <strong>This is the best so far.</strong> 
+                                  <h2><a href="#">Come on! Let's travel in Philippines </a></h2>
                                   <p>Very impressive and my next destination would probably be at Carles Iloilo. </p><a class="post-card__avatar" href="post5.html">
                                     <div class>
                                       <img src="images/avatar.png" height="60" width="60" class="rounded-circle">
