--- a/post5.html
+++ b/post5.html
@@ -21,7 +21,7 @@
             </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a>
+        <menu><a href="blog.html"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a>
         </menu>
       </section>
 
