modified:   post2.html 	modified:   post3.html 	modified:   post4.html 	modified:   post5.html 	modified:   post6.html

--- a/post5.html
+++ b/post5.html
@@ -136,7 +136,7 @@
           <input type="text" name="Fname" placeholder="Full Name" class="comment__name">
           <input class="comment__email" type="email" name="Email" placeholder="Email">
           <input type="text" class="comment__message" placeholder="Message" required>
-          <a href="https://formsubmit.co/el/{custom-link}/?next=https://jhenchem0210.github.io/miniproj2/post.html" target="_blank">
+          <a href="https://formsubmit.co/el/{custom-link}/?next=https://jhenchem0210.github.io/miniproj2/post5.html" target="_blank">
           <button class=" btn btn-outline-success me-2" type="submit">Submit</button></a>
         </form>
       </section>
